change WH to UCLA info

--- a/css/whose_house.css
+++ b/css/whose_house.css
@@ -21,7 +21,7 @@
 }
 
 #away {
-  background-image: url(/img/san_diego_aztecs.jpg);
+  background-image: url(/img/ucla_bruins.jpg);
 }
 
 .masthead-nav > li > a {
