--- a/css/whose_house.css
+++ b/css/whose_house.css
@@ -48,10 +48,11 @@
   height: 500px;
   border-radius: 250px;
   transform: rotate(0deg);
+
+  -webkit-transition: transform 10s;
+  -webkit-transition-timing-function: ease;
   transition: transform 10s;
   transition-timing-function: ease;
-  -webkit-transition: all 10s;
-  -webkit-transition-timing-function: ease;
 }
 
 .wheel-item {
